cli: Option for Kotlin DSL when generating Gradle project
 - jooby-cli generates build.gradle.kts when: `--gradle --kotlin` options are present
 - fix #3289